[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
target-version = ['py37']

[tool.isort]
profile = "black"

[tool.poetry]
authors = [
  "Guilhem Saurel <guilhem.saurel@laas.fr>",
  "Jianye Ye <yejianye@gmail.com>"
]
description = "Send emails written in Markdown"
homepage = 'https://github.com/nim65s/nmdmail'
keywords = ['email', 'html', 'inline css', 'markdown']
license = "BSD-2-Clause"
name = "nmdmail"
readme = "README.md"
repository = "https://github.com/nim65s/nmdmail.git"
version = "0.3.1"

[tool.poetry.dependencies]
Markdown = "^3.4.1"
beautifulsoup4 = "^4.11.1"
emails = "^0.6"
lxml = "^4.9.1"
premailer = "^3.10.0"
python = "^3.7"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = {extras = ["toml"], version = "^7.2.5"}
mock = "^5.0.2"

[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pyupgrade = "^3.1.0"
types-markdown = "^3.4.2.1"

[tool.poetry.scripts]
nmdmail = 'nmdmail.cli:main'

[tool.poetry.urls]
changelog = "https://github.com/nim65s/nmdmail/blob/main/CHANGELOG.md"

[tool.ruff]
extend-select = ["A", "B", "C", "COM", "EM", "EXE", "G", "N", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py37"

[tool.tomlsort]
all = true

[tool.coverage.run]
source = ["nmdmail"]
